HTML: navbar + home

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>치앙마이 황제 투어 | 골프, 풀빌라, 에스코트 서비스</title>
     <meta name="description" content="치앙마이에서 즐기는 골프, 풀빌라, 에스코트 원스톱 서비스" />
     <meta name="author" content="chiangmai tour" />
-    <link rel="icon" href="img/favicon.png" />
+    <link rel="icon" href="img/Tiny/Logo.png" />
     <!-- font awesome -->
     <script 
     src="https://kit.fontawesome.com/9d5a065dfa.js" 
@@ -23,6 +23,39 @@
     
 </head>
 <body>
+    <!-- Navbar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <img src="img/Tiny/Logo(투명).png" alt="치앙마이투어 로고">
+            <a href="#">ChiangmaiTour</a>
+        </div>
+        <div class="navbar__menu">
+            <ul class="navebar__menu__item">Home</ul>
+            <ul class="navebar__menu__item">About</ul>
+            <ul class="navebar__menu__item">Skills</ul>
+            <ul class="navebar__menu__item">Work</ul>
+            <ul class="navebar__menu__item">Review</ul>
+            <ul class="navebar__menu__item">Contact</ul>
+        </div>
+    </nav>
     
+    <!-- Home -->
+    <section id="home">
+        <img src="/img/Tiny/Logo.png" 
+        alt="치앙마이투어 로고"
+        class="home__avatar">
+        <h1 class="home__title">태국 치앙마이 황제 투어</h1>
+        <h2 class="home__description">골프, 풀빌라, 에스코트 서비스까지 원스톱!</h2>
+    </section>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Review -->
+    <section id="review"></section>
+    <!-- contact -->
+    <section id="contact"></section>
 </body>
 </html>
