--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <ul class="navbar__menu__item">Review</ul>
             <ul class="navbar__menu__item">Contact</ul>
         </div>
+
+        <!-- Toggle button -->
+        <button class="navbar__toggle-btn">
+            <i class="far fas fa-bars"></i>
+        </button>
+
     </nav>
     
     <!-- Home -->
