--- a/index.html
+++ b/index.html
@@ -137,23 +137,22 @@ onselect="return false" >
     
     <!-- Video -->
     <section id="skills" class="section">
+            <div class="section__container">
+                <h1>치앙마이 황제투어</h1>
+                <p>태국에서 즐기는 럭셔리 황제 투어, 골프, 풀빌라, 에스코트 <br> 서비스까지 
+                최고의 여행은 저희와 함께 해결할 수 있습니다. <br>
+                현지 한국 가이드를 통해 편안하고 즐거운 태국 여행에서<br>최고의 즐거움을 누려보세요.
+                </p>    
+            </div>
+        </section>
+        </div>
         <section class="jb__box">
                 <video class="video" muted autoplay loop src="/video/2020 - Tour Soft 골프볼 광고 영상.mp4" type="video">
                     <strong>현재 브라우저는 동영상 태그를 지원하지 않습니다.</strong> 
                 </video>
                 <div class="jb__box-cover"></div>
+        </section>
 
-            <div class="jb__text">
-                <div class="section__container">
-                    <h1>치앙마이 황제투어</h1>
-                    <p>태국 치앙마이에서 즐기는 럭셔리 황제 투어, 골프, 풀빌라, 에스코트 서비스까지 <br>
-                    최고의 여행은 저희와 함께 해결할 수 있습니다. <br>
-                    현지 한국 가이드를 통해 편안하고 즐거운 태국 여행에서 모든 즐거움을 누려보세요.
-                    </p>    
-                </div>
-            </div>
-         </section>
-    </section>
 
     <!-- Skills(컨텐츠 변경) -->
 
