--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>치앙마이 황제 투어 | 골프, 풀빌라, 에스코트 서비스</title>
     <meta name="description" content="치앙마이에서 즐기는 골프, 풀빌라, 에스코트 원스톱 서비스" />
     <meta name="author" content="chiangmai tour" />
+    <meta name="google-site-verification" content="8LpJ-h0777lWQMDBC4BikMVqOUGDiwOzUV7C6G3LIDI" />
+    <meta name="naver-site-verification" content="ea748e54b6811d81858ffb86580a00b20d59511e" />
+
     <link rel="icon" href="./img/Tiny/favicon.png" />
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/9d5a065dfa.js" crossorigin="anonymous"></script>
