--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ onselect="return false" >
     <!-- contact -->
     <section id="contact" class="section">
         <h2 class="contact__title">Contact Us</h2>
-        <h3 class="contact__email">Derp@alkdf.com</h3>
+        <h3 class="contact__email">0000000@mail.com</h3>
         <div class="contact__links">
             <a href="javascript:void(0)" target="_self">
                 kakaotalk
@@ -450,7 +450,7 @@ onselect="return false" >
             </a>
         </div>
         <p class="contact__rights">
-            2022 <a href="javascript:void(0)">Chiangmai Tour</a> - All rights reserved
+            2022 <a href="index.html">Chiangmai Tour</a> - All rights reserved
         </p>
     </section>
 
