--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>치앙마이 황제 투어 | 골프, 풀빌라, 에스코트 서비스</title>
-    <meta name="description" content="치앙마이에서 즐기는 골프, 풀빌라, 에스코트 원스톱 서비스" />
+    <title>치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스</title>
+    <meta name="description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
     <meta name="author" content="chiangmai tour" />
+    <meta name="robots" content="index, follow" />
     <meta name="google-site-verification" content="8LpJ-h0777lWQMDBC4BikMVqOUGDiwOzUV7C6G3LIDI" />
     <meta name="naver-site-verification" content="ea748e54b6811d81858ffb86580a00b20d59511e" />
 
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://chiangtour.com">
+    <meta property="og:title" content="치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스">
+    <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요">
+    <meta property="og:site_name" content="치앙마이 황제 투어">
+    <meta property="og:locale" content="en_ko">
+
+    <meta property="og:title" content="치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스" /> 
+    <meta property="og:url" content="https://chiangtour.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="태국 황제 투어" /> 
+    <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
+ 
     <link rel="icon" href="./img/Tiny/favicon.png" />
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/9d5a065dfa.js" crossorigin="anonymous"></script>
