--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ onselect="return false" >
             SERVICE INFO
         </h2>
         <h3 style="color:#4d4d4d; font-weight: bold; margin-top: 0;">One-Stop Care Service</h3>
-        <span style="margin: 0 40 0 40; color: #4d4d4d;">저희 치앙마이 투어는 동남아 여행의 메카인 태국에 <br>방문하시는 여러분께 <br>차별화된 최고의
+        <span style="margin: 0 40 0 40; color: #4d4d4d;">
+            저희 치앙마이 투어는 동남아 여행의 메카인 태국에 <br>방문하시는 여러분께 <br>차별화된 최고의
             태국 여행 패키지 서비스를 제공합니다.
             <br>저희를 통해 태국에 방문하시는 여행객들에게 불편함없이<br> 골프, 풀빌라, 에스코트를 제공하는 <br>
             <span style="color:#4d4d4d; font-weight: bold;"> One-Stop Care Service</span><br>를 
@@ -231,7 +232,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="치앙마이골프장">
                     <div class="project__description">
-                        <h3>Golf</h3>
+                        <p>Golf</p>
                         <span>그린피 저렴한 골프장 1</span>
                     </div>
                 </a>
@@ -241,7 +242,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="태국골프장">
                     <div class="project__description">
-                        <h3>Golf</h3>
+                        <p>Golf</p>
                         <span>쾌적한 공기 골프장 2</span>
                     </div>
                 </a>                
@@ -251,7 +252,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                     <div class="project__description">
-                        <h3>Golf</h3>
+                        <p>Golf</p>
                         <span>최고 시설의 골프장 3</span>
                     </div>
                 </a>
@@ -261,7 +262,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                     <div class="project__description">
-                        <h3>Golf</h3>
+                        <p>Golf</p>
                         <span>최고 시설의 골프장 4</span>
                     </div>
                 </a>
@@ -271,7 +272,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                     <div class="project__description">
-                        <h3>Golf</h3>
+                        <p>Golf</p>
                         <span>최고 시설의 골프장 5</span>
                     </div>
                 </a>
@@ -281,7 +282,7 @@ onselect="return false" >
                 data-type="golf">
                  <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                  <div class="project__description">
-                     <h3>Golf</h3>
+                     <p>Golf</p>
                      <span>최고 시설의 골프장 6</span>
                  </div>
                 </a>
@@ -291,7 +292,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <h3>Pool Villa</h3>
+                        <p>Pool Villa</p>
                         <span>깔끔한 시설의 풀빌라 1</span>
                     </div>
                 </a>
@@ -301,7 +302,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <h3>Pool Villa</h3>
+                        <p>Pool Villa</p>
                         <span>깔끔한 시설의 풀빌라 2</span>
                     </div>
                 </a>
@@ -311,7 +312,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <h3>Pool Villa</h3>
+                        <p>Pool Villa</p>
                         <span>깔끔한 시설의 풀빌라 3</span>
                     </div>
                 </a>
@@ -321,7 +322,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <h3>Pool Villa</h3>
+                        <p>Pool Villa</p>
                         <span>깔끔한 시설의 풀빌라 4</span>
                     </div>
                 </a>
@@ -331,7 +332,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <h3>Pool Villa</h3>
+                        <p>Pool Villa</p>
                         <span>깔끔한 시설의 풀빌라 5</span>
                     </div>
                 </a>
@@ -341,7 +342,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <h3>Pool Villa</h3>
+                        <p>Pool Villa</p>
                         <span>깔끔한 시설의 풀빌라 6</span>
                     </div>
                 </a>    
@@ -351,7 +352,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <h3>escort 1</h3>
+                        <p>escort 1</p>
                         <span>귀엽고 청순한 스타일 1</span>
                     </div>
                 </a>
@@ -361,7 +362,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <h3>escort 1</h3>
+                        <p>escort 1</p>
                         <span>귀엽고 청순한 스타일 2</span>
                     </div>
                 </a>
@@ -371,7 +372,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <h3>escort 1</h3>
+                        <p>escort 1</p>
                         <span>귀엽고 청순한 스타일 3</span>
                     </div>
                 </a>
@@ -381,7 +382,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <h3>escort 1</h3>
+                        <p>escort 1</p>
                         <span>귀엽고 청순한 스타일 4</span>
                     </div>
                 </a>
@@ -391,7 +392,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <h3>escort 1</h3>
+                        <p>escort 1</p>
                         <span>귀엽고 청순한 스타일 5</span>
                     </div>
                 </a>
@@ -401,7 +402,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <h3>escort 1</h3>
+                        <p>escort 1</p>
                         <span>귀엽고 청순한 스타일 6</span>
                     </div>
                 </a>                                               
