--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ onselect="return false" >
     <!-- Home -->
     <section id="home" class="section">
       <div class="home__container">
-        <a href="#">
+        <a href="javscript:void(0)" target="_self">
             <img src="/img/Tiny/LOGO.png" 
             alt="치앙마이투어 로고"
             class="home__avatar">
