--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ onselect="return false" >
     <!-- Home -->
     <section id="home" class="section">
       <div class="home__container">
-        <a href="https://chiangtour.com" target="_self">
+        <a href="https://chiangtour.com/" target="_self">
             <img src="/img/Tiny/LOGO.png" 
             alt="치앙마이투어 로고"
             class="home__avatar">
@@ -232,7 +232,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="치앙마이골프장">
                     <div class="project__description">
-                        <p>Golf</p>
+                        <p>골프</p>
                         <span>그린피 저렴한 골프장 1</span>
                     </div>
                 </a>
@@ -242,7 +242,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="태국골프장">
                     <div class="project__description">
-                        <p>Golf</p>
+                        <p>골프</p>
                         <span>쾌적한 공기 골프장 2</span>
                     </div>
                 </a>                
@@ -252,7 +252,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                     <div class="project__description">
-                        <p>Golf</p>
+                        <p>골프</p>
                         <span>최고 시설의 골프장 3</span>
                     </div>
                 </a>
@@ -262,7 +262,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                     <div class="project__description">
-                        <p>Golf</p>
+                        <p>골프</p>
                         <span>최고 시설의 골프장 4</span>
                     </div>
                 </a>
@@ -272,7 +272,7 @@ onselect="return false" >
                    data-type="golf">
                     <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                     <div class="project__description">
-                        <p>Golf</p>
+                        <p>골프</p>
                         <span>최고 시설의 골프장 5</span>
                     </div>
                 </a>
@@ -282,7 +282,7 @@ onselect="return false" >
                 data-type="golf">
                  <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
                  <div class="project__description">
-                     <p>Golf</p>
+                     <p>골프</p>
                      <span>최고 시설의 골프장 6</span>
                  </div>
                 </a>
@@ -292,7 +292,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <p>Pool Villa</p>
+                        <p>풀빌라</p>
                         <span>깔끔한 시설의 풀빌라 1</span>
                     </div>
                 </a>
@@ -302,7 +302,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <p>Pool Villa</p>
+                        <p>풀빌라</p>
                         <span>깔끔한 시설의 풀빌라 2</span>
                     </div>
                 </a>
@@ -312,7 +312,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <p>Pool Villa</p>
+                        <p>풀빌라</p>
                         <span>깔끔한 시설의 풀빌라 3</span>
                     </div>
                 </a>
@@ -322,7 +322,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <p>Pool Villa</p>
+                        <p>풀빌라</p>
                         <span>깔끔한 시설의 풀빌라 4</span>
                     </div>
                 </a>
@@ -332,7 +332,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <p>Pool Villa</p>
+                        <p>풀빌라</p>
                         <span>깔끔한 시설의 풀빌라 5</span>
                     </div>
                 </a>
@@ -342,7 +342,7 @@ onselect="return false" >
                    data-type="villa">
                     <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
                     <div class="project__description">
-                        <p>Pool Villa</p>
+                        <p>풀빌라</p>
                         <span>깔끔한 시설의 풀빌라 6</span>
                     </div>
                 </a>    
@@ -352,7 +352,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <p>escort 1</p>
+                        <p>에스코트걸</p>
                         <span>귀엽고 청순한 스타일 1</span>
                     </div>
                 </a>
@@ -362,7 +362,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <p>escort 1</p>
+                        <p>에스코트걸</p>
                         <span>귀엽고 청순한 스타일 2</span>
                     </div>
                 </a>
@@ -372,7 +372,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <p>escort 1</p>
+                        <p>에스코트걸</p>
                         <span>귀엽고 청순한 스타일 3</span>
                     </div>
                 </a>
@@ -382,7 +382,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <p>escort 1</p>
+                        <p>에스코트걸</p>
                         <span>귀엽고 청순한 스타일 4</span>
                     </div>
                 </a>
@@ -392,7 +392,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <p>escort 1</p>
+                        <p>에스코트걸</p>
                         <span>귀엽고 청순한 스타일 5</span>
                     </div>
                 </a>
@@ -402,7 +402,7 @@ onselect="return false" >
                    data-type="escort">
                     <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
-                        <p>escort 1</p>
+                        <p>에스코트걸</p>
                         <span>귀엽고 청순한 스타일 6</span>
                     </div>
                 </a>                                               
@@ -412,8 +412,8 @@ onselect="return false" >
     
     <!-- Tour -->
     <section id="review" class="section">
-        <h2>Review</h2>
-        <h3>See what they say about me</h3>
+        <h2>TOUR INFO</h2>
+        <h3>태국 여행의 즐거움을 경험하세요</h3>
         <div class="testimonials">
             <div class="testimonial">
                 <img src="/img/tour/20221027112351.png"
