--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <meta property="og:title" content="태국 황제 투어" /> 
     <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
  
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCDKH8Y8HH"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LCDKH8Y8HH');
+    </script>
+
     <link rel="icon" href="./img/Tiny/favicon.png" />
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/9d5a065dfa.js" crossorigin="anonymous"></script>
