--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="태국 황제 투어" /> 
     <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
- 
+    
+    <!-- Google ads -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9884982808493036"
+    crossorigin="anonymous"></script>
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCDKH8Y8HH"></script>
     <script>
