--- a/index.html
+++ b/index.html
@@ -461,16 +461,15 @@ onselect="return false" >
     <!-- contact -->
     <section id="contact" class="section">
         <h2 class="contact__title">Contact Us</h2>
-        <h3 class="contact__email">0000000@mail.com</h3>
         <div class="contact__links">
-            <a href="javascript:void(0)" target="_self">
+            <a href="https://open.kakao.com/o/s8DEEaRe" target="_self">
                 kakaotalk
                 <img
                 class="contact__links-messenger" 
                 src="/img/icon/free-icon-kakao-talk-2564690.png"
                 alt="카카오톡 아이콘"> 
             </a>
-            <a href="javascript:void(0)" target="_self">
+            <a href="https://t.me/cnx_tour" target="_self">
                 telegram
                 <img
                 class="contact__links-messenger" 
