--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ onselect="return false" >
     </section>
 
     <section class="jb__box">
-            <video class="video" muted autoplay loop src="/video/2020 - Tour Soft 골프볼 광고 영상.mp4" type="video">
+            <video class="video" muted autoplay loop src="/video/치앙마이.mp4" type="video">
                 <strong>현재 브라우저는 동영상 태그를 지원하지 않습니다.</strong> 
                 </video>
                 <div class="jb__box-cover"></div>
@@ -224,7 +224,6 @@ onselect="return false" >
     <!-- Gallery -->
     <section id="gallery" class="section">
         <h2>Gallery</h2>
-        <h3>Experience</h3>
         <div class="gallery__categories">
             <button class="category__btn selected" data-filter="*">
                 All
@@ -240,21 +239,21 @@ onselect="return false" >
             </button>
         
             <div class="gallery__projects">
-                <a href="javascript:void(0)"
+                <a href="https://open.kakao.com/o/s8DEEaRe"
                    class="project"
                    target="_self"
                    data-type="golf">
-                    <img src="/img/골프1.jpg" class="project__img" alt="치앙마이골프장">
+                    <img src="/img/golf/치앙마이 알파인.png" class="project__img" alt="치앙마이 황제 골프장">
                     <div class="project__description">
                         <p>골프</p>
                         <span>그린피 저렴한 골프장 1</span>
                     </div>
                 </a>
-                <a href="javascript:void(0)"
+                <a href="https://t.me/cnx_tour"
                    class="project"
                    target="_self"
                    data-type="golf">
-                    <img src="/img/골프1.jpg" class="project__img" alt="태국골프장">
+                    <img src="/img/golf/치앙마이 그린밸리.png" class="project__img" alt="태국 황제골프장">
                     <div class="project__description">
                         <p>골프</p>
                         <span>쾌적한 공기 골프장 2</span>
@@ -264,7 +263,7 @@ onselect="return false" >
                    class="project"
                    target="_blank"
                    data-type="golf">
-                    <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
+                    <img src="/img/golf/치앙마이 마에조.png" class="project__img" alt="방콕 황제 골프장">
                     <div class="project__description">
                         <p>골프</p>
                         <span>최고 시설의 골프장 3</span>
@@ -274,7 +273,7 @@ onselect="return false" >
                    class="project"
                    target="_blank"
                    data-type="golf">
-                    <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
+                    <img src="/img/golf/치앙마이 하이랜드.png" class="project__img" alt="방콕 황제골프장">
                     <div class="project__description">
                         <p>골프</p>
                         <span>최고 시설의 골프장 4</span>
@@ -284,7 +283,7 @@ onselect="return false" >
                    class="project"
                    target="_blank"
                    data-type="golf">
-                    <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
+                    <img src="/img/golf/방콕 로얄컨트리.png" class="project__img" alt="치앙마이 황제골프장">
                     <div class="project__description">
                         <p>골프</p>
                         <span>최고 시설의 골프장 5</span>
@@ -294,130 +293,130 @@ onselect="return false" >
                 class="project"
                 target="_blank"
                 data-type="golf">
-                 <img src="/img/골프1.jpg" class="project__img" alt="방콕 골프장">
+                 <img src="/img/golf/시암 컨트리.png" class="project__img" alt="태국 황제 골프장">
                  <div class="project__description">
                      <p>골프</p>
                      <span>최고 시설의 골프장 6</span>
                  </div>
                 </a>
-                <a href="javascript:void(0)"
+                <a href="https://open.kakao.com/o/s8DEEaRe"
                    class="project"
                    target="_self"
                    data-type="villa">
-                    <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
+                    <img src="/img/풀빌라/풀빌라 (1).jpg" class="project__img" alt="치앙마이 황제투어 풀빌라">
                     <div class="project__description">
                         <p>풀빌라</p>
-                        <span>깔끔한 시설의 풀빌라 1</span>
+                        <span>치앙마이 풀빌라1</span>
+                    </div>
+                </a>
+                <a href="https://t.me/cnx_tour"
+                   class="project"
+                   target="_self"
+                   data-type="villa">
+                    <img src="/img/풀빌라/풀빌라 (2).jpg" class="project__img" alt="태국 황제투어 풀빌라">
+                    <div class="project__description">
+                        <p>풀빌라</p>
+                        <span>치앙마이 풀빌라2</span>
                     </div>
                 </a>
                 <a href="javascript:void(0)"
                    class="project"
                    target="_self"
                    data-type="villa">
-                    <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
+                    <img src="/img/풀빌라/풀빌라 (3).jpg" class="project__img" alt="태국 황제골프 풀빌라">
                     <div class="project__description">
                         <p>풀빌라</p>
-                        <span>깔끔한 시설의 풀빌라 2</span>
+                        <span>치앙마이 풀빌라3</span>
                     </div>
                 </a>
                 <a href="javascript:void(0)"
                    class="project"
                    target="_self"
                    data-type="villa">
-                    <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
+                    <img src="/img/풀빌라/풀빌라 (4).jpg" class="project__img" alt="태국 황제 투어 풀빌라">
                     <div class="project__description">
                         <p>풀빌라</p>
-                        <span>깔끔한 시설의 풀빌라 3</span>
+                        <span>치앙마이 풀빌라4</span>
                     </div>
                 </a>
                 <a href="javascript:void(0)"
                    class="project"
                    target="_self"
                    data-type="villa">
-                    <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
+                    <img src="/img/풀빌라/풀빌라 (5).jpg" class="project__img" alt="태국 황제 골프 풀빌라">
                     <div class="project__description">
                         <p>풀빌라</p>
-                        <span>깔끔한 시설의 풀빌라 4</span>
+                        <span>치앙마이 풀빌라5</span>
                     </div>
                 </a>
                 <a href="javascript:void(0)"
                    class="project"
                    target="_self"
                    data-type="villa">
-                    <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
+                    <img src="/img/풀빌라/풀빌라 (6).jpg" class="project__img" alt="치앙마이 에스코트 풀빌라">
                     <div class="project__description">
                         <p>풀빌라</p>
-                        <span>깔끔한 시설의 풀빌라 5</span>
-                    </div>
-                </a>
-                <a href="javascript:void(0)"
-                   class="project"
-                   target="_self"
-                   data-type="villa">
-                    <img src="/img/풀빌라1.jpg" class="project__img" alt="태국 풀빌라">
-                    <div class="project__description">
-                        <p>풀빌라</p>
-                        <span>깔끔한 시설의 풀빌라 6</span>
+                        <span>치앙마이 풀빌라6</span>
                     </div>
                 </a>    
-                <a href="javascript:void(0)"
+                <a href="https://open.kakao.com/o/s8DEEaRe"
                    class="project"
                    target="_self"
                    data-type="escort">
-                    <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
+                    <img src="/img/girl/girl (1).jpg" class="project__img" alt="방콕 에스코트걸">
                     <div class="project__description">
                         <p>에스코트걸</p>
-                        <span>귀엽고 청순한 스타일 1</span>
+                        <span>태국 에스코트1</span>
                     </div>
                 </a>
-                <a href="javascript:void(0)"
+                <a href="https://t.me/cnx_tour"
                    class="project"
                    target="_self"
                    data-type="escort">
-                    <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
+                    <img src="/img/girl/girl (2).jpg" class="project__img" alt="치앙마이 에스코트걸">
                     <div class="project__description">
                         <p>에스코트걸</p>
-                        <span>귀엽고 청순한 스타일 2</span>
+                        <span>태국 에스코트2</span>
                     </div>
                 </a>
-                <a href="javascript:void(0)"
+                <a href="https://open.kakao.com/o/s8DEEaRe"
                    class="project"
                    target="_self"
                    data-type="escort">
-                    <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
+                    <img src="/img/girl/girl (3).jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
                         <p>에스코트걸</p>
-                        <span>귀엽고 청순한 스타일 3</span>
+                        <span>치앙마이 에스코트3</span>
                     </div>
                 </a>
-                <a href="javascript:void(0)"
+                <a href="https://t.me/cnx_tour"
                    class="project"
                    target="_self"
                    data-type="escort">
-                    <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
+                    <img src="/img/girl/girl (4).jpg" class="project__img" alt="푸잉 에스코트걸">
                     <div class="project__description">
                         <p>에스코트걸</p>
-                        <span>귀엽고 청순한 스타일 4</span>
+                        <span>치앙마이 에스코트4</span>
                     </div>
                 </a>
-                <a href="javascript:void(0)"
+                <a href="https://open.kakao.com/o/s8DEEaRe"
                    class="project"
                    target="_self"
                    data-type="escort">
-                    <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
+                    <img src="/img/girl/girl (5).jpg" class="project__img" alt="타이 에스코트걸">
                     <div class="project__description">
                         <p>에스코트걸</p>
-                        <span>귀엽고 청순한 스타일 5</span>
+                        <span>태국 에코걸1</span>
                     </div>
                 </a>
-                <a href="javascript:void(0)"
+                <a href="https://t.me/cnx_tour"
                    class="project"
                    target="_self"
                    data-type="escort">
-                    <img src="/img/에스코트1.jpg" class="project__img" alt="태국 에스코트걸">
+                    <img src="/img/girl/girl (8).jpg" class="project__img" alt="태국 에스코트걸">
                     <div class="project__description">
                         <p>에스코트걸</p>
-                        <span>귀엽고 청순한 스타일 6</span>
+                        <span>치앙마이 에코걸2</span>
                     </div>
                 </a>                                               
             </div>
