--- a/index.html
+++ b/index.html
@@ -474,6 +474,13 @@ onselect="return false" >
                 src="/img/icon/free-icon-kakao-talk-2564690.png"
                 alt="카카오톡 아이콘"> 
             </a>
+            <a href="https://band.us/@cnxroy55" target="_self">
+                Band
+                <img
+                class="contact__links-messenger" 
+                src="/img/icon/band-logo.png"
+                alt="카카오톡 아이콘"> 
+            </a>
             <a href="https://t.me/cnx_tour" target="_self">
                 telegram
                 <img
