--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스</title>
+    <title>치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스</title>
     <meta name="description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
     <meta name="author" content="chiangmai tour" />
     <meta name="robots" content="index, follow" />
@@ -13,7 +13,7 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chiangtour.com">
-    <meta property="og:title" content="치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스">
+    <meta property="og:title" content="치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스">
     <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요">
     <meta property="og:site_name" content="치앙마이 황제 투어">
     <meta property="og:locale" content="en_ko">
