--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:site_name" content="치앙마이 황제 투어">
     <meta property="og:locale" content="en_ko">
 
-    <meta property="og:title" content="치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스" /> 
+    <meta property="og:title" content="치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스" /> 
     <meta property="og:url" content="https://chiangtour.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="태국 황제 투어" /> 
