adjust meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스</title>
-    <meta name="description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
+    <meta name="description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다. 태국에서 즐기는 골프태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요
+    여행 가이드, 태국 맛집 소개, 픽업 등 원스톱 서비스를 제공하며, 편안하고 즐거운 태국 여행을 만들어드리기 위해 노력하고 있습니다." />
     <meta name="author" content="chiangmai tour" />
     <meta name="robots" content="index, follow" />
     <meta name="google-site-verification" content="8LpJ-h0777lWQMDBC4BikMVqOUGDiwOzUV7C6G3LIDI" />
@@ -14,7 +15,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chiangtour.com">
     <meta property="og:title" content="치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스">
-    <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요">
+    <meta property="og:description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다. 태국에서 즐기는 골프태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요
+    여행 가이드, 태국 맛집 소개, 픽업 등 원스톱 서비스를 제공하며, 편안하고 즐거운 태국 여행을 만들어드리기 위해 노력하고 있습니다.">
     <meta property="og:site_name" content="치앙마이 황제 투어">
     <meta property="og:locale" content="en_ko">
 
@@ -103,7 +105,7 @@ onselect="return false" >
         <h3 style="color:#4d4d4d; font-weight: bold; margin-top: 0;">One-Stop Care Service</h3>
         <span style="margin: 0 40 0 40; color: #4d4d4d;">
             저희 치앙마이 투어는 동남아 여행의 메카인 태국에 <br>방문하시는 여러분께 <br>차별화된 최고의
-            태국 여행 패키지 서비스를 제공합니다.
+            태국 여행 태국 황제골프, 태국 황제투어 패키지 서비스를 제공합니다.
             <br>저희를 통해 태국에 방문하시는 여행객들에게 불편함없이<br> 골프, 풀빌라, 에스코트를 제공하는 <br>
             <span style="color:#4d4d4d; font-weight: bold;"> One-Stop Care Service</span><br>를 
             이용하여 편안한 여행을 즐겨보세요.<br>
