--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ onselect="return false" >
     <section id="skills" class="section">
             <div class="section__container">
                 <div class="video__description">
-                    <h2>치앙마이 황제투어</h2>
+                    <h2>치앙마이 황제투어 | 태국 황제투어, 태국 황제골프, 태국 밤문화</h2>
                     <p>태국에서 즐기는 럭셔리 황제 투어, 골프, 풀빌라, 에스코트 <br> 서비스까지 
                     최고의 여행은 저희와 함께 해결할 수 있습니다. <br>
                     현지 한국 가이드를 통해 편안하고 즐거운 태국 여행에서<br>최고의 즐거움을 누려보세요.
