--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스</title>
-    <meta name="description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다. 태국에서 즐기는 골프태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요
-    여행 가이드, 태국 맛집 소개, 픽업 등 원스톱 서비스를 제공하며, 편안하고 즐거운 태국 여행을 만들어드리기 위해 노력하고 있습니다." />
+    <meta name="description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다." />
+    <link rel="canonical" href="www.chiangtour.com">
     <meta name="author" content="chiangmai tour" />
     <meta name="robots" content="index, follow" />
     <meta name="google-site-verification" content="8LpJ-h0777lWQMDBC4BikMVqOUGDiwOzUV7C6G3LIDI" />
     <meta name="naver-site-verification" content="ea748e54b6811d81858ffb86580a00b20d59511e" />
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chiangtour.com">
+    <meta property="og:url" content="https://www.chiangtour.com">
     <meta property="og:title" content="치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스">
-    <meta property="og:description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다. 태국에서 즐기는 골프태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요
-    여행 가이드, 태국 맛집 소개, 픽업 등 원스톱 서비스를 제공하며, 편안하고 즐거운 태국 여행을 만들어드리기 위해 노력하고 있습니다.">
+    <meta property="og:description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다.">
     <meta property="og:site_name" content="치앙마이 황제 투어">
     <meta property="og:locale" content="en_ko">
 
     <meta property="og:title" content="치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스" /> 
-    <meta property="og:url" content="https://chiangtour.com" />
+    <meta property="og:url" content="https://www.chiangtour.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="태국 황제 투어" /> 
-    <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
+    <meta property="og:title" content="태국 황제 투어, 태국 황제골프, 태국황제투어, 태국황제골프" /> 
+    <meta property="og:description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다." />
     
     <!-- Google ads -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9884982808493036"
