--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ onselect="return false" >
     <section id="contact" class="section">
         <h2 class="contact__title">Contact Us</h2>
         <div class="contact__links">
-            <a href="https://open.kakao.com/o/sWZdXY2e" target="_self">
+            <a href="https://open.kakao.com/o/sEah4Y2e" target="_self">
                 kakaotalk
                 <img
                 class="contact__links-messenger" 
