added meta keywords

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스</title>
     <meta name="description" content="치앙마이 투어는 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다." />
+    <meta name="keywords" content="태국 황제투어, 태국황제투어, 태국황제골프, 태국 황제골프, 치앙마이 풀빌라, 치앙마이 황제투어, 치앙마이 황제골프">
     <link rel="canonical" href="www.chiangtour.com">
     <meta name="author" content="chiangmai tour" />
     <meta name="robots" content="index, follow" />
