--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ onselect="return false" >
     <nav id="navbar">
         <div class="navbar__logo">
             <i class="fas fa-plane"></i>
-            <a href="#">CHIANG-MAI TOUR</a>
+            <a href="https://chiangtour.com">CHIANG-MAI TOUR</a>
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item active" data-link="#home">HOME</li>
@@ -83,7 +83,7 @@ onselect="return false" >
     <!-- Home -->
     <section id="home" class="section">
       <div class="home__container">
-        <a href="https://chiangtour.com/" target="_self">
+        <a href="https://thethaitour.com" target="_self">
             <img src="/img/Tiny/LOGO.png" 
             alt="치앙마이투어 로고"
             class="home__avatar">
@@ -93,7 +93,7 @@ onselect="return false" >
             치앙마이 투어가 여러분께 특별한 경험을 선사합니다. <br>
             골프, 풀빌라, 에스코트<br> One-Stop Care!
         </h3>
-        <button class="home__contact">문의하기</button>
+        <button class="home__contact"><a href="https://thethaitour.com">문의하기</a></button>
       </div>
     </section>
     
