returned head codes

--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스</title>
-    <meta name="description" content="치앙마이 투어는 치앙마이 황제투어 최고의 서비스를 추구하며, 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다. 잊지 못할 태국 여행의 추억을 치앙마이 황제투어와 함께 즐겨보세요" />
-    <meta name="keywords" content="태국 황제투어, 태국황제투어, 태국황제골프, 태국 황제골프, 치앙마이 풀빌라, 치앙마이 황제투어, 치앙마이 황제골프">
-    <link rel="canonical" href="www.chiangtour.com">
+    <title>치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스</title>
+    <meta name="description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
     <meta name="author" content="chiangmai tour" />
     <meta name="robots" content="index, follow" />
     <meta name="google-site-verification" content="8LpJ-h0777lWQMDBC4BikMVqOUGDiwOzUV7C6G3LIDI" />
     <meta name="naver-site-verification" content="ea748e54b6811d81858ffb86580a00b20d59511e" />
-
+    <link rel="canonical" href="https://chiangtour.com">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.chiangtour.com">
-    <meta property="og:title" content="치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스">
-    <meta property="og:description" content="치앙마이 투어는 치앙마이 황제투어 최고의 서비스를 추구하며, 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다. 잊지 못할 태국 여행의 추억을 치앙마이 황제투어와 함께 즐겨보세요">
+    <meta property="og:url" content="https://chiangtour.com">
+    <meta property="og:title" content="치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스">
+    <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요">
     <meta property="og:site_name" content="치앙마이 황제 투어">
     <meta property="og:locale" content="en_ko">
-
-    <meta property="og:title" content="치앙마이 황제투어 | 태국 황제골프, 태국 황제투어, 풀빌라, 에스코트 서비스" /> 
-    <meta property="og:url" content="https://www.chiangtour.com" />
+    <meta property="og:title" content="치앙마이 황제투어 | 골프, 풀빌라, 에스코트 서비스" /> 
+    <meta property="og:url" content="https://chiangtour.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="태국 황제 투어, 태국 황제골프, 태국황제투어, 태국황제골프" /> 
-    <meta property="og:description" content="치앙마이 투어는 치앙마이 황제투어 최고의 서비스를 추구하며, 태국 황제골프, 태국 황제투어 전문적으로 가이드하는 최초 원스톱 태국 여행 서비스입니다. 잊지 못할 태국 여행의 추억을 치앙마이 황제투어와 함께 즐겨보세요" />
-    
+    <meta property="og:title" content="태국 황제 투어" /> 
+    <meta property="og:description" content="태국에서 섹시녀들과 즐기는 골프, 풀빌라, 풀파티, 에스코트 원스톱 서비스 황홀한 여행의 끝판왕을 경험하세요" />
+
     <!-- Google ads -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9884982808493036"
     crossorigin="anonymous"></script>
