--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
 <body 
 oncontextmenu="return false"
 ondragstart="return false"
-onselect="return false" >
+onselect="return false"
+onload="openPopup();" >
+
+    <!-- Pop-up-->
+    <img src="/img/popup.png" style="display: none;">
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
