--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ onselect="return false"
 onload="openPopup();" >
 
     <!-- Pop-up-->
-    <img src="/img/popup.png" style="display: none;">
+    <img src="/img/popup.png" style="display: none;" alt="태국황제투어 promotion">
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
