logo link delete

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ onload="openPopup();" >
     <!-- Home -->
     <section id="home" class="section">
       <div class="home__container">
-        <a href="https://thethaitour.com" target="_self">
+        <a href="https://chiangtour.com" target="_self">
             <img src="/img/Tiny/LOGO.png" 
             alt="치앙마이투어 로고"
             class="home__avatar">
