--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@ ondragstart="return false"
 onselect="return false"
 onload="openPopup();" >
 
-    <!-- Pop-up-->
-    <img src="/img/popup.png" style="display: none;" alt="태국황제투어 promotion">
+    <!-- Pop-up
+    <img src="/img/popup.png" style="display: none;" alt="태국황제투어 promotion"> -->
+
+
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
@@ -94,7 +96,7 @@ onload="openPopup();" >
             치앙마이 투어가 여러분께 특별한 경험을 선사합니다. <br>
             골프, 풀빌라, 에스코트<br> One-Stop Care!
         </h3>
-        <button class="home__contact"><a href="https://thethaitour.com">문의하기</a></button>
+        <button class="home__contact"><a href="https://cafe.naver.com/puingthai">문의하기</a></button>
       </div>
     </section>
     
