--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ onload="openPopup();" >
             치앙마이 투어가 여러분께 특별한 경험을 선사합니다. <br>
             골프, 풀빌라, 에스코트<br> One-Stop Care!
         </h3>
-        <button class="home__contact"><a href="https://cafe.naver.com/puingthai">문의하기</a></button>
+        <button class="home__contact"><a href="https://www.chiangtour.com/#contact">문의하기</a></button>
       </div>
     </section>
     
