--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ onload="openPopup();" >
     <section id="contact" class="section">
         <h2 class="contact__title">Contact Us</h2>
         <div class="contact__links">
-            <a href="https://open.kakao.com/o/sIPrcW8e" target="_self">
+            <a href="https://open.kakao.com/o/sDhgJ7af" target="_self">
                 kakaotalk
                 <img
                 class="contact__links-messenger" 
